--- a/core/templates/authenticated/base.html
+++ b/core/templates/authenticated/base.html
@@ -6,10 +6,10 @@
 {% load staticfiles %}
 
 {% block css %}
-    <link rel="stylesheet" href="{% static "css/scrolltables.css" %}" type="text/css"/>
     <link rel="stylesheet" href="{% static "css/common.css" %}" type="text/css"/>
     <link rel="stylesheet" href="{% static "css/sidebar.css" %}" type="text/css"/>
     <link rel="stylesheet" href="{% static "css/popup.css" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "css/dataTables.min.css" %}" type="text/css"/>
     {# So that each extending template can include its own stylesheet #}
     {% block authenticated_body_css %}{% endblock authenticated_body_css %}
 {% endblock css %}
@@ -26,6 +26,7 @@
 {% block js %}
 <script type="text/javascript" src="{% static "js/charts/printable_report.js" %}"></script> 
 <script type="text/javascript" src="{% static "js/loading.js" %}"></script> 
+<script type="text/javascript" src="{% static "js/dataTables.min.js" %}"></script> 
 <script type="text/javascript" src="{% static "js/popup.js" %}"></script>  
 {% endblock js %}
 
