introduction to popup,clean up of files

--- a/core/templates/authenticated/home/student.html
+++ b/core/templates/authenticated/home/student.html
@@ -20,6 +20,7 @@
     <!-- Performance Div -->
 {% include "authenticated/widgets/student_performance.html" %}
 {% include "authenticated/widgets/printable_performance.html" %}
+{% include "authenticated/widgets/chart_popup.html" %}
     <!-- Assignment Div -->
 <div class='row'>
     {% include "authenticated/widgets/active_assignment.html" %}
