--- a/core/templates/authenticated/sidebar/base.html
+++ b/core/templates/authenticated/sidebar/base.html
@@ -3,7 +3,7 @@
 	    <ul class="nav nav-tabs nav-stacked">
 	        {% block userinfo %}
                 <div id="userinfo">
-                    {% include "authenticated/sidebar/userinfo.html" %}
+                    {% include "authenticated/sidebar/userinfo.html" with userinfo=vm.sidebar.userinfo %}
                     {% block custom_userinfo %} {% endblock %}
                 </div>
             {% endblock %}
