--- a/core/templates/authenticated/sidebar/student.html
+++ b/core/templates/authenticated/sidebar/student.html
@@ -1,7 +1,7 @@
 {% extends "authenticated/sidebar/base.html" %}
-{% block cistom_userinfo %}
+{% block custom_userinfo %}
     <div class="userinfo_element">
-        <div>{{ vm.sidebar.classroom }}</div>
+        <div>{{ vm.sidebar.userinfo.classroom }}</div>
     </div>
 {% endblock %}
 {% block sidebar_content %}
