--- a/core/templates/authenticated/base.html
+++ b/core/templates/authenticated/base.html
@@ -16,6 +16,7 @@
 
 {% block body %}
     {% block sidebar %}
+        {% include "authenticated/sidebar/base.html" %}
     {% endblock %}
     
     {% block authenticated_body %}{% endblock authenticated_body %}
