passwords working, not final

--- a/core/templates/authenticated/base.html
+++ b/core/templates/authenticated/base.html
@@ -17,7 +17,8 @@
 
 {% block body %}
     {% block sidebar %}
-    {% endblock %}
+        {% include "authenticated/sidebar/base.html" %}
+{% endblock %}
     
     {% block authenticated_body %}{% endblock authenticated_body %}
     
