--- a/core/templates/authenticated/widgets/graded_assignment.html
+++ b/core/templates/authenticated/widgets/graded_assignment.html
@@ -1,10 +1,9 @@
-<div class='col-md-4 col-sm-5 col-xs-5'>
+<div class='col-md-5 col-sm-5 col-xs-5'>
             <h4 class="header header4">Graded Assignments</h4>
             <br>
 
             <div class="scroll">
-                <table class="fulltable incompletetable" cellspacing='0'> <!-- cellspacing='0' is important, don't change -->
-
+                <table id="graded_assignment_table" class="table table-condensed table-striped table-hover" cellspacing='0'>
                     <!-- Table Header -->
                     <thead>
                     <tr>
