--- a/core/templates/authenticated/base.html
+++ b/core/templates/authenticated/base.html
@@ -28,5 +28,7 @@
 <script type="text/javascript" src="{% static "js/charts/printable_report.js" %}"></script> 
 <script type="text/javascript" src="{% static "js/loading.js" %}"></script> 
 <script type="text/javascript" src="{% static "js/dataTables.min.js" %}"></script> 
+<script type="text/javascript" src="{% static "js/common.js" %}"></script> 
+
 {% endblock js %}
 
