--- a/core/templates/authenticated/home/student.html
+++ b/core/templates/authenticated/home/student.html
@@ -20,7 +20,7 @@
     <!-- Performance Div -->
 {% include "authenticated/widgets/student_performance.html" %}
 {% include "authenticated/widgets/printable_performance.html" %}
-{% include "authenticated/widgets/chart_popup.html" %}
+{% include "authenticated/widgets/calculator_tools.html" %}
     <!-- Assignment Div -->
 <div class='row'>
     {% include "authenticated/widgets/active_assignment.html" %}
@@ -32,7 +32,7 @@
 {% endblock authenticated_body %}
 
 {% block js %}
-
+    <script type="text/javascript" src="{% static "js/calculator.js" %}"></script> 
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript" src="{% static "js/charts/mockdata.js" %}"></script>
     <script type="text/javascript" src="{% static "js/student_subjectbar.js" %}"></script>
@@ -41,5 +41,5 @@
     <script type="text/javascript" src="{% static "js/charts/assignment_performance.js" %}"></script>
     <script type="text/javascript" src="{% static "js/charts/performance_report.js" %}"></script>
     <script type="text/javascript" src="{% static "js/charts/performance_breakdown.js" %}"></script>  
-    <script type="text/javascript" src="{% static "js/charts/graphs.js" %}"></script>       
+    <script type="text/javascript" src="{% static "js/charts/graphs.js" %}"></script>        
 {% endblock js %}
