--- a/hwcentral/templates/base.html
+++ b/hwcentral/templates/base.html
@@ -50,6 +50,7 @@
     <!-- Scripts -->
 
     <script type="text/javascript" src="{% static 'js/jquery.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery-ui.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/chosen/chosen.jquery.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/base.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
