--- a/core/templates/authenticated/password.html
+++ b/core/templates/authenticated/password.html
@@ -1,4 +1,4 @@
-{# extends "authenticated/base.html" #}
+{% extends "authenticated/base.html" %}
 {% block authenticated_body %}
 <form action= '/password/' method='post'>{% csrf_token %}
 
