--- a/core/templates/registrations/password_reset_email.html
+++ b/core/templates/registrations/password_reset_email.html
@@ -1,2 +1,2 @@
 Someone asked for password reset for email {{ email }}. Follow the link below:
-{{ protocol}}://{{ domain }}{% url 'django.contrib.auth.views.password_reset_confirm' uidb64=uid token=token %}
+{{ protocol}}://127.0.0.1:8000{% url 'django.contrib.auth.views.password_reset_confirm' uidb64=uid token=token %}
