--- a/core/templates/authenticated/password.html
+++ b/core/templates/authenticated/password.html
@@ -1,6 +1,6 @@
 {% extends "authenticated/base.html" %}
 {% block authenticated_body %}
-<form action= '/password/' method='post'>{% csrf_token %}
+<form action= '{% url 'password' %}' method='post'>{% csrf_token %}
 
     {{ vm.authenticated_body.form.as_p }}
 
