--- a/core/templates/authenticated/settings/passwordemail_change.html
+++ b/core/templates/authenticated/settings/passwordemail_change.html
@@ -1,6 +1,6 @@
 <div id="changeactions">
 <div class="largebutton floatleft largesizedbutton">
-	<div class="buttonlabel">Change Password</div>
+	<a href="{% url 'password' %}"><div class="buttonlabel" > Change Password</div></a>
 </div>
 <div class="largebutton nextbutton floatleft largesizedbutton">
 	<div class="buttonlabel">Change Email-ID</div>
