--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -29,7 +29,7 @@
                     {% include "form_field.html" %}
                 {% endfor %}
                 <div class='loginbuttons'>
-                <input type="submit" class='btn btn-lg btn-default' value="Log In"/> &nbsp
+                <input type="submit" class='btn btn-lg btn-default' value="Log In"/> &nbspx
                 <input type="hidden" name="next" value="{{ next }}"/>
                 </div>
             </form>
