--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -16,7 +16,7 @@
             <!--- Start Code for Registration ---->
 
             {% if user_creation_form.errors or user_info_form.errors %}
-                {#  We use a custom error message as there are no non_field_errors for the registrations form  #}
+                {#  We use a custom error message as there are no non_field_errors for the registration form  #}
                 <p class="errmsg_cumulative">Registration failed. Please fix the errors below and try again.</p>
             {% endif %}
 
