--- a/hwcentral/templates/footer.html
+++ b/hwcentral/templates/footer.html
@@ -1,5 +1,5 @@
 <div class='navbar navbar-inverse navbar-static-bottom'>
-    <p class='navbar-brand navbar-right'> Photography: Divam Arora &nbsp &copy HWCentral 2015 &nbsp </p>
+    <p class='navbar-brand navbar-right'>  &copy HWCentral 2015 &nbsp </p>
 
     <ul class="nav navbar-nav footer">
         <li><a href="{% url 'about' %}">About Us</a></li>
