--- a/core/templates/password/password_reset_complete.html
+++ b/core/templates/password/password_reset_complete.html
@@ -1,6 +1,6 @@
-{% block title %}Password reset complete{% endblock %}
-
-{% block content %}
+{% extends "base.html" %}
+Password reset complete
+{% block body %}
 <p>Your password has been set.  You may go ahead and log in now.</p>
 <p><a href="{% url 'login' %}">Log in</a></p>
 {% endblock %}
