--- a/core/templates/password/password_reset_done.html
+++ b/core/templates/password/password_reset_done.html
@@ -1,6 +1,6 @@
-{% block title %}Password reset successful{% endblock %}
-
-{% block content %}
-<p>We've e-mailed you instructions for setting your password to the e-mail address you submitted.</p>
+{% extends "base.html" %}
+Password reset successful
+{% block body %}
+<p>If your netered email was registered with us, you will relieve the instructions for password reset shortly.</p>
 <p>You should be receiving it shortly.</p>
 {% endblock %}
