--- a/core/templates/password/password_reset_form.html
+++ b/core/templates/password/password_reset_form.html
@@ -1,6 +1,6 @@
-{% block title %}Reset Password{% endblock %}
-
-{% block mainblock %}
+{% extends "base.html" %}
+Reset Password
+{% block body %}
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
