--- a/core/templates/authenticated/settings/parent.html
+++ b/core/templates/authenticated/settings/parent.html
@@ -3,9 +3,9 @@
     {% include "authenticated/sidebar/parent.html" %}
 {% endblock %}
 {% block customdata %}
-  <h4 class='header header4'> Children:
-      {% for child_info in vm.authenticated_body.child_list %}
-          {% include "authenticated/utils/parent_child_header.html" %}<br>
-    	{% endfor %}
-	</h4>
+  <h6 class='header header6'> Children: </h6>
+    {% for child_info in vm.authenticated_body.child_list %}
+        {% include "authenticated/utils/parent_child_header.html" %}<br>
+    {% endfor %}
+	
 {% endblock %}
