--- a/core/templates/authenticated/settings/passwordemail_change.html
+++ b/core/templates/authenticated/settings/passwordemail_change.html
@@ -1,8 +1,3 @@
-<div id="changeactions">
-<div class="largebutton floatleft largesizedbutton">
+<div class="largebutton floatleft passchange">
 	<a href="{% url 'password' %}"><div class="buttonlabel" > Change Password</div></a>
-</div>
-<div class="largebutton nextbutton floatleft largesizedbutton">
-	<div class="buttonlabel">Change Email-ID</div>
-</div>
 </div>
