--- a/core/templates/authenticated/settings/base.html
+++ b/core/templates/authenticated/settings/base.html
@@ -1,21 +1,19 @@
 {% extends "authenticated/base.html" %}
 
 {% load staticfiles %}
-
 {% block authenticated_body_css %}
     <link rel="stylesheet" href="{% static "css/settings.css" %}" type="text/css"/>
 {% endblock authenticated_body_css %}
 
 {% block authenticated_body %}
-    <div>
-        <h3 class="header header3">Account Settings</h3><br>
-    </div>
-    <div>    
+    <h5 class="well col-md-10 topheader header5">Account Settings</h5><br></br>
+    
+    <div class='row'>    
         {% include "authenticated/settings/common_account.html" %}
         {% block customdata %}
-        {% endblock %}
+        {% endblock %} <br>
         {% include "authenticated/settings/passwordemail_change.html" %}
     </div>
-    <br>
+    
 
 {% endblock authenticated_body %}
