--- a/core/templates/authenticated/settings/common_account.html
+++ b/core/templates/authenticated/settings/common_account.html
@@ -1,4 +1,4 @@
-<h4 class="header header4">Name : {{ user.first_name }} {{ user.last_name }}</h4><br>
-<h4 class="header header4">User ID : {{ user.username }}</h4><br>
-<h4 class="header header4">Email ID : {{ user.email }}</h4><br>
-<h4 class="header header4">School : {{ vm.authenticated_body.school }}</h4><br>
+<h6 class="header header6">Name : </h6> {{ user.first_name }} {{ user.last_name }}<br>
+<h6 class="header header6">User ID : </h6> {{ user.username }}<br>
+<h6 class="header header6">Email ID : </h6> {{ user.email }}  <br>
+<h6 class="header header6">School : </h6>{{ vm.authenticated_body.school }}</h4><br>
