--- a/core/templates/authenticated/utils/parent_child_header.html
+++ b/core/templates/authenticated/utils/parent_child_header.html
@@ -1,4 +1,4 @@
-<div class="parent-child-header">
-    <div>{{ child_info.name }}</div>
-    <div> {{ child_info.classroom }} </div>
-</div>
+<div class='parent-child'>
+    {{ child_info.name }}</br>
+    {{ child_info.classroom }}
+</div> 
