password pages all fixed

--- a/core/templates/authenticated/password.html
+++ b/core/templates/authenticated/password.html
@@ -1,10 +1,14 @@
 {% extends "authenticated/base.html" %}
 {% block authenticated_body %}
-<form action= '{% url 'password' %}' method='post'>{% csrf_token %}
+    <h5 class="well col-md-10 topheader header5">Reset Password</h5><br></br>
+    <div class='row'>
+        <p> &nbsp Fill in the following details to reset your password </p>
+        <form action= '{% url 'password' %}' method='post'>{% csrf_token %}
 
 
-    {{ vm.authenticated_body.form.as_p }}
+            {{ vm.authenticated_body.form.as_p }}
 
-    <input type='submit' value='Submit'/>
-</form>
+            <input type='submit' value='Submit'/>
+        </form>
+    </div>
 {% endblock %}
