--- a/core/templates/authenticated/password_success.html
+++ b/core/templates/authenticated/password_success.html
@@ -1,5 +1,8 @@
-
-<form action= {% url 'home' %}>
-    CONGRATS! YOU HAVE SUCCESSFULLY CHANGED THE PASSWORD!
-    <input type='submit' value='Return to home'/>
-</form>
+{% extends "base.html" %}
+{% block body %}
+    <h4 class='well col-md-12'> Reset your Password</h4>
+    <form action= {% url 'home' %}>
+        &nbsp You have successfully changed your password !<br>
+        &nbsp <input type='submit' value='Return to home'/>
+    </form>
+{% endblock body %}
