--- a/core/templates/password/password_reset_done.html
+++ b/core/templates/password/password_reset_done.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
-Password reset successful
 {% block body %}
-<p>If your netered email was registered with us, you will relieve the instructions for password reset shortly.</p>
-<p>You should be receiving it shortly.</p>
+<h4 class='well col-md-12'> Reset your Password</h4>
+<p> &nbsp  If your entered email was registered with us, you will receive the instructions for password reset shortly. </p>
+<p>  &nbsp You should receive an email within the next 30 minutes. </p>
+
 {% endblock %}
