--- a/core/templates/password/password_reset_form.html
+++ b/core/templates/password/password_reset_form.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
-Reset Password
+
 {% block body %}
+<h4 class='well col-md-12'> Reset your Password</h4>
+<p> &nbsp Enter your email id below. An Email will be sent to you with instructions on how to recover your passowrd </p>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
