--- a/hwcentral/templates/base.html
+++ b/hwcentral/templates/base.html
@@ -46,7 +46,7 @@
 
     <!-- Body -->
 
-    <div>
+    <div id='main_body'>
         {% block body %}{% endblock body %}
     </div>
     <!-- Footer -->
