--- a/core/templates/password/password_reset_confirm.html
+++ b/core/templates/password/password_reset_confirm.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
-Reset Password
 {% block body %}
+    <h4 class='well col-md-12'> Reset your Password</h4>
     {% if validlink %}
-        <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Submit</button>
-        </form>
+        <p> &nbsp Enter your email id below. An Email will be sent to you with instructions on how to recover your passowrd </p>
+            <form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit">Submit</button>
+            </form>
     {% else %}
         <p>This reset link is no longer valid!</p>
     {% endif %}
