--- a/core/templates/authenticated/sidebar/userinfo.html
+++ b/core/templates/authenticated/sidebar/userinfo.html
@@ -2,5 +2,6 @@
 	<h6 class='sidebarheader header6'> Personal Info </h6>
 <li>{{ userinfo.name }}</li>
 <li>{{ userinfo.user_school }}</li>
+<li id='user_id' class='invisible'>{{userinfo.user_id}}</li>
 </li>
 
