--- a/core/templates/authenticated/home/student.html
+++ b/core/templates/authenticated/home/student.html
@@ -21,6 +21,7 @@
 {% include "authenticated/widgets/student_performance.html" %}
 {% include "authenticated/widgets/printable_performance.html" %}
 {% include "authenticated/widgets/calculator_tools.html" %}
+{% include "authenticated/widgets/chart_popup.html" %}
     <!-- Assignment Div -->
 
 <div class='row'>
@@ -34,7 +35,6 @@
     <script type="text/javascript" src="{% static "js/calculator.js" %}"></script> 
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript" src="{% static "js/charts/mockdata.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/student_subjectbar.js" %}"></script>
     <script type="text/javascript" src="{% static "js/charts/printbutton.js" %}"></script> 
     <script type="text/javascript" src="{% static "js/charts/subjectroom_performance_breakdown.js" %}"></script>
     <script type="text/javascript" src="{% static "js/charts/assignment_performance.js" %}"></script>
