refactored js in base

--- a/core/templates/authenticated/base.html
+++ b/core/templates/authenticated/base.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="{% static "css/common.css" %}" type="text/css"/>
     <link rel="stylesheet" href="{% static "css/sidebar.css" %}" type="text/css"/>
     <link rel="stylesheet" href="{% static "css/dataTables.min.css" %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static "css/jquery-ui.min.css" %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static "css/jquery-ui.theme.min.css" %}" type="text/css"/>
     {# So that each extending template can include its own stylesheet #}
     {% block authenticated_body_css %}{% endblock authenticated_body_css %}
 {% endblock css %}
@@ -19,13 +17,15 @@
 <script type="text/javascript" src="{% static "js/charts/printable_report.js" %}"></script> 
 <script type="text/javascript" src="{% static "js/loading.js" %}"></script> 
 <script type="text/javascript" src="{% static "js/dataTables.min.js" %}"></script> 
-<script type="text/javascript" src="{% static "js/common.js" %}"></script> 
+<script type="text/javascript" src="{% static "js/common.js" %}"></script>
+{% block authenticated_body_js %}{% endblock authenticated_body_js %} 
 {% endblock js %}
 
 {% block body %}
     {% block sidebar %}
       {% include "authenticated/sidebar/base.html" %}
 {% endblock %}
+
 
     
     {% block authenticated_body %}{% endblock authenticated_body %}
