--- a/core/templates/authenticated/home/admin.html
+++ b/core/templates/authenticated/home/admin.html
@@ -21,6 +21,6 @@
     
 {% endblock authenticated_body %}
 
-{% block js %}
+{% block authenticated_body_js %}
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-{% endblock js %}
+{% endblock authenticated_body_js %}
