--- a/hwcentral/templates/base.html
+++ b/hwcentral/templates/base.html
@@ -22,7 +22,9 @@
     <link rel="stylesheet" href="{% static 'css/base.css' %}" type="text/css"/>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css"/>
     <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static 'css/header/base.css' %}" type="text/css"/> 
+    <link rel="stylesheet" href="{% static 'css/header/base.css' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'css/jquery-ui.min.css' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'css/jquery-ui.theme.min.css' %}" type="text/css"/> 
     {% block css %}{% endblock css %}
 
     <!-- Scripts -->
