--- a/core/templates/authenticated/home/teacher.html
+++ b/core/templates/authenticated/home/teacher.html
@@ -24,6 +24,6 @@
 
 {% endblock authenticated_body %}
 
-{% block js %}
+{% block authenticated_body_js %}
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-{% endblock js %}
+{% endblock authenticated_body_js %}
