--- a/core/templates/authenticated/charts/subjectroom_performance_breakdown.html
+++ b/core/templates/authenticated/charts/subjectroom_performance_breakdown.html
@@ -1,9 +1,11 @@
-<h6 class="header header6 perf"> Subject Room Performance Breakdown</h6>
-<div id='subjectroom_performance_breakdown'>
-    <div>
-        <ul id='subjectroombar' class="nav nav-tabs">
-        </ul>
-    </div>
-    <div id="subjectroombargraph">
+<div class='row'>
+    <h6 class="header header6 perf"> Subject Room Performance Breakdown</h6>
+    <div id='subjectroom_performance_breakdown'>
+        <div>
+            <ul id='subjectroombar' class="nav nav-tabs">
+            </ul>
+        </div>
+        <div id="subjectroombargraph">
+        </div>
     </div>
 </div>
