--- a/core/templates/authenticated/home/teacher.html
+++ b/core/templates/authenticated/home/teacher.html
@@ -14,7 +14,10 @@
  <!-- Announcements Div -->
     {% include "authenticated/widgets/announcement_box.html" %}
     <br>
-    {% include "authenticated/widgets/assignment_create.html" %}
+    <div class='col-md-10'>
+        {% include "authenticated/widgets/assignment_create.html" %}
+        {% include "authenticated/charts/subjectroom_performance_breakdown.html" %}
+    </div>
 <!-- Assignment Div -->
     <div class='row'>
         {% include "authenticated/widgets/active_assignment.html" %}
@@ -26,4 +29,10 @@
 
 {% block authenticated_body_js %}
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script type="text/javascript" src="{% static "js/charts/subjectroom_performance_breakdown.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/charts/assignment_performance.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/charts/performance_report.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/charts/performance_breakdown.js" %}"></script>  
+    <script type="text/javascript" src="{% static "js/charts/graphs.js" %}"></script>   
+    
 {% endblock authenticated_body_js %}
