--- a/core/templates/activation/activation_email_body.html
+++ b/core/templates/activation/activation_email_body.html
@@ -1,1 +1,9 @@
+Welcome to homeworkentral!
+Your account has been set up.click on the link below to activate your account and set your password:
+
 {{ protocol}}://{{ domain }}{% url 'django.contrib.auth.views.password_reset_confirm' uidb64=uid token=token %}
+
+Have a great experience using hwcentral.in!
+
+Regards
+Homeworkcentral Team
