--- a/core/templates/authenticated/home/parent.html
+++ b/core/templates/authenticated/home/parent.html
@@ -1,33 +1,18 @@
-{% extends "authenticated/base.html" %}
+{% extends "authenticated/home/base.html" %}
 
 {% load staticfiles %}
 {% block sidebar %}
         {% include "authenticated/sidebar/parent.html" %}
-{% endblock %}
-{% block authenticated_body_css %}
-    <link rel="stylesheet" href="{% static "css/home/base.css" %}" type="text/css"/>
+{% endblock sidebar %}
+{% block home_css %}
     <link rel="stylesheet" href="{% static "css/home/parent.css" %}" type="text/css"/>
-{% endblock authenticated_body_css %}
+{% endblock home_css %}
 
-{% block authenticated_body_js %}
-    <script type="text/javascript" src="{% static "js/calculator.js" %}"></script> 
-    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-    <script type="text/javascript" src="{% static "js/charts/mockdata.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/charts/printbutton.js" %}"></script> 
-    <script type="text/javascript" src="{% static "js/charts/subjectroom_performance_breakdown.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/charts/assignment_performance.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/charts/performance_report.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/charts/performance_breakdown.js" %}"></script>  
-    <script type="text/javascript" src="{% static "js/charts/graphs.js" %}"></script> 
-    <script type="text/javascript" src="{% static "js/home/parent.js" %}"></script>  
-{% endblock authenticated_body_js %}   
+   
 
-{% block authenticated_body %}
+{% block home_body %}
 
 
-    <!-- Announcements Div -->
-{% include "authenticated/widgets/announcement_box.html" %}
-<br>
 
 <h4 class="header header4">List of Children</h4><br>
 </br>
@@ -54,5 +39,13 @@
 </div>
 
    
-{% endblock authenticated_body %}
+{% endblock home_body %}
+
+{% block home_js %}
+    <script type="text/javascript" src="{% static "js/printbutton.js" %}"></script> 
+    <script type="text/javascript" src="{% static "js/charts/assignment_performance.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/charts/performance_report.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/charts/performance_breakdown.js" %}"></script>  
+    <script type="text/javascript" src="{% static "js/home/parent.js" %}"></script>  
+{% endblock home_js %}
 
