--- a/core/templates/authenticated/home/student.html
+++ b/core/templates/authenticated/home/student.html
@@ -1,21 +1,16 @@
-{% extends "authenticated/base.html" %}
+{% extends "authenticated/home/base.html" %}
 
 {% load staticfiles %}
 
-
 {% block sidebar %}
     {% include "authenticated/sidebar/student.html" %}
-{% endblock %}
+{% endblock sidebar %}
 
-{% block authenticated_body_css %}
-    <link rel="stylesheet" href="{% static "css/home/base.css" %}" type="text/css"/>
+{% block home_css %}
     <link rel="stylesheet" href="{% static "css/home/student.css" %}" type="text/css"/>
-{% endblock authenticated_body_css %}
+{% endblock home_css %}
 
-{% block authenticated_body %}
-    <!-- Announcements Div -->
-{% include "authenticated/widgets/announcement_box.html" %} 
-<br>
+{% block home_body %}
 
   <!-- Performance Div -->
 <div class='col-md-10'>
@@ -30,16 +25,12 @@
     {% include "authenticated/widgets/graded_assignment.html" %}
 </div>
 
-{% endblock authenticated_body %}
+{% endblock home_body %}
 
-{% block authenticated_body_js %}
+{% block home_js %}
     <script type="text/javascript" src="{% static "js/calculator.js" %}"></script> 
-    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-    <script type="text/javascript" src="{% static "js/charts/mockdata.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/charts/printbutton.js" %}"></script> 
-    <script type="text/javascript" src="{% static "js/charts/subjectroom_performance_breakdown.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/printbutton.js" %}"></script> 
     <script type="text/javascript" src="{% static "js/charts/assignment_performance.js" %}"></script>
     <script type="text/javascript" src="{% static "js/charts/performance_report.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/charts/performance_breakdown.js" %}"></script>  
-    <script type="text/javascript" src="{% static "js/charts/graphs.js" %}"></script>        
-{% endblock authenticated_body_js %}
+    <script type="text/javascript" src="{% static "js/charts/performance_breakdown.js" %}"></script>         
+{% endblock home_js %}
