--- a/core/templates/authenticated/home/teacher.html
+++ b/core/templates/authenticated/home/teacher.html
@@ -1,19 +1,16 @@
-{% extends "authenticated/base.html" %}
+{% extends "authenticated/home/base.html" %}
 
 {% load staticfiles %}
 {% block sidebar %}
     {% include "authenticated/sidebar/teacher.html" %}
-{% endblock %}
+{% endblock sidebar %}
 
-{% block authenticated_body_css %}
-    <link rel="stylesheet" href="{% static "css/home/base.css" %}" type="text/css"/>
+{% block home_css %}
     <link rel="stylesheet" href="{% static "css/home/teacher.css" %}" type="text/css"/>
-{% endblock authenticated_body_css %}
+{% endblock home_css %}
 
-{% block authenticated_body %}
- <!-- Announcements Div -->
-    {% include "authenticated/widgets/announcement_box.html" %}
-    <br>
+{% block home_body %}
+
     <div class='col-md-10'>
         {% include "authenticated/widgets/assignment_create.html" %}
         {% include "authenticated/charts/subjectroom_performance_breakdown.html" %}
@@ -25,14 +22,9 @@
     </div>    
 
 
-{% endblock authenticated_body %}
+{% endblock home_body %}
 
-{% block authenticated_body_js %}
-    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+{% block home_js %}
     <script type="text/javascript" src="{% static "js/charts/subjectroom_performance_breakdown.js" %}"></script>
     <script type="text/javascript" src="{% static "js/charts/assignment_performance.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/charts/performance_report.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/charts/performance_breakdown.js" %}"></script>  
-    <script type="text/javascript" src="{% static "js/charts/graphs.js" %}"></script>   
-    
-{% endblock authenticated_body_js %}
+{% endblock home_js %}
