--- a/core/templates/authenticated/classroom_id/base.html
+++ b/core/templates/authenticated/classroom_id/base.html
@@ -11,7 +11,7 @@
 {% include "authenticated/widgets/announcement_box.html" %} 
 <br>
 {% block subjectroom_body %}{% endblock subjectroom_body %}
-<li class='invisible'> {{ vm.authenticated_body.classroom.pk}}</li>
+<li id='classroom_id' class='invisible'> {{ vm.authenticated_body.classroom.pk}}</li>
 <div class='row'>
     {% include "authenticated/widgets/active_assignment.html" %}
     {% include "authenticated/widgets/graded_assignment.html" %}
