--- a/core/templates/authenticated/classroom_id/admin.html
+++ b/core/templates/authenticated/classroom_id/admin.html
@@ -5,14 +5,14 @@
         {% include "authenticated/sidebar/admin.html" %}
 {% endblock %}
 
-{% block subjectroom_css %}{% endblock subjectroom_css %}
+{% block classroom_css %}{% endblock classroom_css %}
 
-{% block subjectroom_body %}
+{% block classroom_body %}
 <div class='col-md-10'>
-    {% include "authenticated/widgets/admin_classroom_performance.html" %}
+    {% include "authenticated/widgets/classroom_performance.html" %}
 </div>
 
-{% endblock subjectroom_body %}
+{% endblock classroom_body %}
 
-{% block subjectroom_js %}
-{% endblock subjectroom_js %}
+{% block classroom_js %}
+{% endblock classroom_js %}
