--- a/core/templates/authenticated/classroom_id/base.html
+++ b/core/templates/authenticated/classroom_id/base.html
@@ -2,7 +2,7 @@
 
 {% load staticfiles %}
 {% block authenticated_body_css %}
- {% block subjectroom_css %} {% endblock subjectroom_css %}
+ {% block classroom_css %} {% endblock classroom_css %}
 {% endblock authenticated_body_css %}
 
 
@@ -10,7 +10,7 @@
 
 {% include "authenticated/widgets/announcement_box.html" %} 
 <br>
-{% block subjectroom_body %}{% endblock subjectroom_body %}
+{% block classroom_body %}{% endblock classroom_body %}
 <li id='classroom_id' class='invisible'> {{ vm.authenticated_body.classroom.pk}}</li>
 <div class='row'>
     {% include "authenticated/widgets/active_assignment.html" %}
@@ -22,6 +22,8 @@
 
 {% block authenticated_body_js %}
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script type="text/javascript" src="{% static 'js/charts/classroom_performance_breakdown.js' %}"></script> 
+    {% block classroom_js %}{% endblock classroom_js %}
     <script type="text/javascript" src="{% static 'js/charts/graph_lib.js' %}"></script> 
-    {% block subjectroom_js %}{% endblock subjectroom_js %}
+    
 {% endblock authenticated_body_js %}
