--- a/core/templates/authenticated/classroom_id/parent.html
+++ b/core/templates/authenticated/classroom_id/parent.html
@@ -5,15 +5,15 @@
         {% include "authenticated/sidebar/parent.html" %}
 {% endblock %}
 
-{% block subjectroom_css %}{% endblock subjectroom_css %}
+{% block classroom_css %}{% endblock classroom_css %}
 
-{% block subjectroom_body %}
+{% block classroom_body %}
 
 <div class='col-md-10'>
-    {% include "authenticated/widgets/student_subjectroom_performance.html" %}
+    {% include "authenticated/charts/performance_breakdown.html" %}
 </div>
 
-{% endblock subjectroom_body %}
+{% endblock classroom_body %}
 
-{% block subjectroom_js %}
-{% endblock subjectroom_js %}
+{% block classroom_js %}
+{% endblock classroom_js %}
