--- a/core/templates/authenticated/widgets/classroom_performance.html
+++ b/core/templates/authenticated/widgets/classroom_performance.html
@@ -2,7 +2,7 @@
 <br>
 <div id='classroom_performance_breakdown'>
     <div>
-        <ul id='clasroombar' class="nav nav-tabs">
+        <ul id='classroombar' class="nav nav-tabs">
         </ul>
     </div>
     <div id="classroombargraph">
