--- a/core/templates/authenticated/widgets/student_performance.html
+++ b/core/templates/authenticated/widgets/student_performance.html
@@ -1,4 +1,4 @@
-<div class='row'>
+<div id="stud_performance" class='row'>
     {% include "authenticated/charts/performance_breakdown.html" %}
     {% include "authenticated/charts/printbutton.html" %}
 </div>
