--- a/core/templates/authenticated/widgets/section_chart_popup.html
+++ b/core/templates/authenticated/widgets/section_chart_popup.html
@@ -1,4 +1,4 @@
-<div id="chart_popup" class="modal fade" role="dialog">
+<div id="section_chart_popup" class="modal fade" role="dialog">
   <div class="modal-dialog">
 
     <!-- Modal content-->
@@ -8,7 +8,7 @@
         <h4 class="modal-title"> Assignment Performance Distribution</h4>
       </div>
       <div class="modal-body">
-        {% include "authenticated/charts/assignment_performance.html" %}
+        {% include "authenticated/charts/section_assignment_performance.html" %}
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
