--- a/core/templates/authenticated/assignment.html
+++ b/core/templates/authenticated/assignment.html
@@ -1,3 +1,4 @@
+{% extends "authenticated/base.html" %}
 {% block authenticated_body %}
 <form action='{% url 'assignment' %}' method='post'>{% csrf_token %}
 
@@ -5,3 +6,4 @@
     <input type='submit' value='Submit'/>
 </form>
 {% endblock %}
+
